@@ -3,6 +3,7 @@ package com.dac.BackEnd.controller.Admin;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -13,6 +14,7 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.util.Arrays;
 import java.time.LocalDateTime;
+import java.util.List;
 
 import com.dac.BackEnd.constant.SuccessConstants;
 import com.dac.BackEnd.convertor.BlogConvertor;
@@ -24,7 +26,7 @@ import com.dac.BackEnd.model.response.ResponseBody;
 import com.dac.BackEnd.model.response.ResponsesBody;
 import com.dac.BackEnd.service.BlogService;
 
-import jakarta.transaction.Transactional;
+//import jakarta.transaction.Transactional;
 
 
 
@@ -102,7 +104,7 @@ public class BlogsAdminController {
         } catch (MessageException e) {
             Response body = new Response();
             body.setCode(e.getErrorCode());
-            body.setMessage(Arrays.asList(e));
+            body.setMessage(List.of(e));
             return ResponseEntity.status(HttpStatus.NOT_FOUND).body(body);
         }
     } 
